--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,5 +55,12 @@
                 <a href="#">Easily manage books and requests from your dashboard</a>
             </div>
         </div>
+
+        <footer class="footer">
+            <div class="container text-center">
+                <p>&#169; 2015 Jennifer Bland | <a href="https://github.com/ratracegrad"><i class="fa fa-github" aria-hidden="true"></i> Github</a></p>
+            </div>
+        </footer>
+
   </body>
 </html>
