--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,12 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     padding-top: 48px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin-bottom: 60px;
 }
 
 a {
@@ -11,4 +17,17 @@ a {
     background-color: #4393b9;
     color: #fff;
     width: 100%;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #4393b9;
+    color: #fff;
+    line-height: 60px;
+}
+.footer a {
+    color: #fff;
 }
